<resources>
    <string name="app_name">lesson24</string>
    <string name="title">Title</string>
    <string name="email">Email</string>
    <string name="textview">TextView</string>
    <string name="comments">Comments</string>
    <string name="current_comment">current comment</string>
    <string name="statistic">Statistic</string>
    <string name="count_of_comments">Count of comments</string>
    <string name="rate_of_comments">rate of comments</string>
</resources>