<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <TextView
        android:id="@+id/post_statistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/count_of_comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/count_of_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_of_comments"
        app:layout_constraintBottom_toTopOf="@+id/rate_of_comments"
        app:layout_constraintEnd_toEndOf="@+id/post_statistic"
        app:layout_constraintStart_toStartOf="@+id/post_statistic"
        app:layout_constraintTop_toBottomOf="@+id/post_statistic" />

    <TextView
        android:id="@+id/rate_of_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/rate_of_comments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/count_of_comments"
        app:layout_constraintStart_toStartOf="@+id/count_of_comments"
        app:layout_constraintTop_toBottomOf="@+id/count_of_comments" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_of_comments" />
</androidx.constraintlayout.widget.ConstraintLayout>